--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "mongoose": "^5.1.7",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "valid-url": "^1.0.9"
   }
 }
