--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "backend-gblurl",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,10 +11,21 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "clean-shortid": "^1.0.0",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "mongoose": "^5.1.7",
     "path": "^0.12.7",
     "valid-url": "^1.0.9"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nithinkashyapn/gb-url-shortner.git"
+  },
+  "bugs": {
+    "url": "https://github.com/nithinkashyapn/gb-url-shortner/issues"
+  },
+  "homepage": "https://github.com/nithinkashyapn/gb-url-shortner#readme",
+  "description": ""
 }
