--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "backend-gblurl",
   "version": "1.0.0",
+  "engines": {
+    "node": ">=9.3.0"
+  },
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
